# floundeR

./: .Rbuildignore  .dockerignore  .gitignore  AGENTS.md  BAMANA_INTEGRATION.md  BIOCONDUCTOR_POLICY.md  DATASETS.md  DEPENDENCIES.md  DERIVED_POD5_DEMOS.md  DESCRIPTION  DEVELOPMENT.md  DISTRIBUTION.md  Dockerfile  GITHUB_INSTALLATION.md  GOVERNANCE.md  GRAMMATEUS_INTEGRATION.md  GRAMMATEUS_RELEASE_ASSETS.md  GRAMMATEUS_RUNTIME_INTERFACE.md  LEGACY_REPORTING.md  NAMESPACE  NEWS.md  POD5_INTEGRATION.md  PORKCHOP_INTEGRATION.md  README.md  REAL_DATA_EVIDENCE.md  REPORTING_INTERFACE.md  ROADMAP.md  RUST_INTEGRATION.md  SYNOPTIKON_QC_PAYLOAD.md  TODO.md  _pkgdown.yml
R/: RcppExports.R  angenieux.R  angenieux_theme.R  bam.R  bamfile.R  fast5.R  fasta.R  fastq.R  file_check.R  floundeR.R  flowcell.R  genbank_genome.R  grammateus.R  grammateus_runtime.R  infographic.R  multiplex_set.R  ncbi_blast.R  ont_open_data.R  pipe.R  pod5.R  porkchop.R  qc_plots.R  qc_report_card.R  qc_run_summary.R  qc_tidy_outputs.R  rust.R  sequencing_set.R  sequencing_summary.R  synoptikon_qc.R  temporal_set.R  zzz.R
docs/: 404.html  AGENTS.html  AGENTS.md  BAMANA_INTEGRATION.html  BAMANA_INTEGRATION.md  BIOCONDUCTOR_POLICY.html  BIOCONDUCTOR_POLICY.md  DATASETS.html  DATASETS.md  DEPENDENCIES.html  DEPENDENCIES.md  DERIVED_POD5_DEMOS.html  DERIVED_POD5_DEMOS.md  DEVELOPMENT.html  DEVELOPMENT.md  DISTRIBUTION.html  DISTRIBUTION.md  GITHUB_INSTALLATION.html  GITHUB_INSTALLATION.md  GOVERNANCE.html  GOVERNANCE.md  (+31 more)
src/rust/: Cargo.toml
src/rust-porkchop/: Cargo.toml
src/rust/src/: lib.rs
(+335 files in other folders)
