[package]
name = "flounder-extendr"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
name = "flounder_extendr"
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.9.0"
pod5-tools = { git = "https://github.com/sagrudd/pod5-tools", rev = "fe6ad3c3eba64b228603a81dd70858bca60df2ad" }

[profile.release]
panic = "abort"
